privacyidea/static_new/src/styles/styles.scss
/* ... */
.margin-16 {
  margin: 16px;
}

.margin-32 {
  margin: 32px;
}

.margin-left-64 {
  margin-left: 64px;
}

.max-width-300 {
  max-width: 300px;
}

.copy-button {
  background: unset;
  border: unset;
  cursor: pointer;
}

.copy-icon {
  font-size: 16px;
  align-items: center;
  display: flex !important;
  justify-content: center;
  color: #d0d0d0;
}

.highlight {
  background-color: var(--green-brand-light) !important;
  padding: 0 2px;
}

::ng-deep {
  .mdc-snackbar {
    margin-bottom: 76px !important;
  }

  .mat-mdc-icon-button {
    display: flex;
    align-items: center;
  }

  .cdk-overlay-pane.mat-mdc-dialog-panel {
    max-width: unset;
  }

  .mat-divider {
    border-top-color: var(--mat-sys-outline-variant) !important;
  }
}

.content-layout {
  max-width: 100vw;
}

.hidden {
  visibility: hidden;
}

::ng-deep {
  .multi-column-panel.mat-mdc-select-panel {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    max-height: unset;
    column-gap: var(--third-global-padding);
    padding: var(--three-quarters-global-padding);
    padding-bottom: var(--global-padding);
    overflow-y: auto;
  }
}

.single-column-panel.mat-mdc-select-panel {
  max-height: unset;
  padding: var(--three-quarters-global-padding);
  padding-bottom: var(--global-padding);
  overflow-y: auto;
}

.select-option {
  @include mat.elevation(3);
  border-radius: var(--border-radius);
  margin: 0 0 var(--third-global-padding) 0;
}

.sticky-header {
  position: sticky;
  top: 0;
  z-index: 100;
  background-color: var(--mat-sys-surface-container-lowest);
  padding: 16px;
  transition: box-shadow 0.3s ease-in-out;
  border-radius: var(--border-radius);
}

.sticky-header.is-sticky {
  @include mat.elevation(3);
}

.sticky-controls {
  display: flex;
  align-items: center;
  gap: var(--global-gap);
}

.sticky-controls .mat-mdc-form-field-subscript-wrapper {
  height: 0;
}

.flex-row-stretch {
  display: flex;
  align-items: stretch;
  gap: var(--global-gap);
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-grow-1 {
  flex-grow: 1;
  flex-basis: 0;
}

.hidden-input {
  display: none;
}

::ng-deep {
  .mat-pseudo-checkbox.mat-pseudo-checkbox-checked::after {
    color: white !important;
  }

  .mdc-list-item--selected:not(.mdc-list-item--disabled):not(.mat-mdc-option-multiple) {
    background-color: var(--mat-sys-primary-light) !important;
  }

  .mat-mdc-option.mdc-list-item {
    background: var(--mat-sys-surface-container-low) !important;
  }

  .mat-mdc-select-panel[aria-multiselectable="false"]
  .mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled)
  .mdc-list-item__primary-text {
    color: white !important;
  }

  .mat-mdc-option:hover:not(.mdc-list-item--selected, .mdc-list-item--disabled) {
    background-color: #f2f9fd;
  }

  .mat-mdc-option.mat-mdc-option-active {
    background-color: var(--mat-sys-surface-container-low) !important;
    color: var(--mat-sys-on-surface) !important;
  }

  .cdk-overlay-container {
    &:has(.nav-accessible-dialog):has(.nav-blocking-dialog) {
      margin-left: 0;
      width: 100%;

      .mat-mdc-dialog-panel {
        margin-left: var(--overlay-margin);
      }
    }

    margin-left: var(--overlay-margin);
    width: calc(100% - var(--overlay-margin));

    &:has(.nav-accessible-dialog) {
      margin-left: var(--overlay-margin);
      width: calc(100% - var(--overlay-margin));
    }

    .mat-mdc-select-panel {
      margin-left: calc(-1 * var(--overlay-margin));
    }

    .mat-mdc-autocomplete-panel {
      margin-left: calc(-1 * var(--overlay-margin));
    }

    .mat-mdc-menu-panel {
      margin-left: calc(-1 * var(--overlay-margin));
    }

    .mat-mdc-tooltip {
      margin-left: calc(-1 * (var(--overlay-margin) + 43px));
    }

    &:has(.welcome-dialog-panel),
    &:has(.global-dialog-panel),
    &:has(.nav-blocking-dialog):not(:has(.nav-accessible-dialog)) {
      margin-left: 0;
      width: 100%;

      .mat-mdc-select-panel,
      .mat-mdc-autocomplete-panel,
      .mat-mdc-menu-panel,
      .mat-mdc-tooltip {
        margin-left: 0 !important;
      }
    }
  }
}

